--- a/presentatie/victor.tex
+++ b/presentatie/victor.tex
@@ -13,29 +13,6 @@
 
 \begin{document}
 	\frame{\titlepage}
-	
-	\section{Introduction}
-	\begin{frame}{Objectives \& Hypotheses}
-		\begin{itemize}
-		\item CNET vs CNCP vs DynCNET
-		\item Hypotheses:
-			\begin{itemize}
-			\item Compare
-				\begin{itemize}
-				\item Profit
-				\item Delivery time
-				\item \# clients undelivered
-				\item Message count
-				\end{itemize}
-			\item Influence on profit
-				\begin{itemize}
-				\item \# drones
-				\item \# warehouses
-				\item \# clients
-				\end{itemize}
-			\end{itemize}
-		\end{itemize}
-	\end{frame}
 
 	\section{Design}
 	
@@ -64,7 +41,31 @@
 			\end{itemize}
 		\end{itemize}
 	\end{frame}
+
+	\section{Objectives}
 	
+	\begin{frame}{Objectives \& Hypotheses}
+		\begin{itemize}
+		\item CNET vs CNCP vs DynCNET
+		\item Hypotheses:
+			\begin{itemize}
+			\item Compare
+				\begin{itemize}
+				\item Profit
+				\item Delivery time
+				\item \# clients undelivered
+				\item Message count
+				\end{itemize}
+			\item Influence on profit
+				\begin{itemize}
+				\item \# drones
+				\item \# warehouses
+				\item \# clients
+				\end{itemize}
+			\end{itemize}
+		\end{itemize}
+	\end{frame}
+		
 	\section{Protocols}
 		
 	\begin{frame}{Contract Net Protocol (CNET)}
