--- a/presentatie/jens.tex
+++ b/presentatie/jens.tex
@@ -22,8 +22,20 @@
 \begin{document}
 	\frame{\titlepage}
 
-	\section{Introduction}
-	
+	\section{Setting}
+	\begin{frame}{Setting}
+		\begin{itemize}
+		\item Package delivery company
+		\item Drones (UAV)
+		\item Battery-constrained
+		\item Crashes (Poisson-distributed)
+		\item Warehouses
+		\item 2 types clients
+		\item Fines
+		\end{itemize}
+	\end{frame}
+
+	\section{Objectives}
 	\begin{frame}{Objectives}
 		\begin{itemize}
 		\item CNET vs CNCP vs DynCNET
@@ -44,19 +56,7 @@
 	\end{frame}
 	\note{Hypotheses zelf gewoon zeggen}
 		
-	\section{Design}
-	\begin{frame}{Setting}
-		\begin{itemize}
-		\item Package delivery company
-		\item Drones (UAV)
-		\item Battery-constrained
-		\item Crashes (Poisson-distributed)
-		\item Warehouses
-		\item 2 types clients
-		\item Fines
-		\end{itemize}
-	\end{frame}
-	
+%	\section{Design}
 %	\begin{frame}{MAS design}
 %		\begin{itemize}
 %			\item Clients have an order
@@ -66,73 +66,73 @@
 %		\end{itemize}
 %	\end{frame}
 	
-	\begin{frame}{MAS design}
-		\begin{itemize}
-			\item Maximize profit company
-			\item Allocate task to most suitable drone
-			\item Find cheapest warehouse
-			\item Cost estimation
-				\begin{itemize}
-				\item Price package
-				\item Price battery charge
-				\item Price failed drone
-				\item Price client
-				\end{itemize}
-			\item Minimize crashes
-			\note{Minimize crashes by recharging in warehouse mid delivery}
-			\item Deliver on time
-		\end{itemize}
-	\end{frame}
+%	\begin{frame}{MAS design}
+%		\begin{itemize}
+%			\item Maximize profit company
+%			\item Allocate task to most suitable drone
+%			\item Find cheapest warehouse
+%			\item Cost estimation
+%				\begin{itemize}
+%				\item Price package
+%				\item Price battery charge
+%				\item Price failed drone
+%				\item Price client
+%				\end{itemize}
+%			\item Minimize crashes
+%			\note{Minimize crashes by recharging in warehouse mid delivery}
+%			\item Deliver on time
+%		\end{itemize}
+%	\end{frame}
 
-	\section{Protocols}
-	\begin{frame}{Contract Net Protocol (CNET)}
-		\begin{itemize}
-			\item Contract negotiation
-			\linebreak
-			\begin{tabular}{cl}
-				M & Task announcement \\
-				C & Bid (on best) \\
-				M & Awarding \\
-				C & Execution \\
-			\end{tabular}
-			\seperation
-			\item Only announce order\note{Not bid deadline etc}
-			\item Only 1 outstanding bid
-			\item Implemented RefusalReason (+ nextAvailableTime)
-		\end{itemize}
-	\end{frame}
-
-	\begin{frame}{Contract Net with Confirmation (CNCP)}
-		\begin{itemize}
-			\item Delayed commitment
-			\item Bid on all
-			\item Accept/Decline when awarded
-			\seperation
-			\item 1 message
-			\item Reannounce task
-		\end{itemize}
-	\end{frame}
-
-	\begin{frame}{Dynamic Contract Net (DynCNET)}
-		\begin{itemize}
-			\item Allow contract switching
-				\begin{itemize}
-				\item Manager
-				\item Contractor
-				\end{itemize}
-			\item Preparation vs execution
-			\seperation
-			\item No oscillation prevention
-		\end{itemize}
-	\end{frame}
-	
-	\begin{frame}{Other extensions}
-		\begin{itemize}
-			\item Prebidding vs Definitive bidding (Aknine et al.)
-			\item Iterated Contract Net
-			\item Leveled commitment
-		\end{itemize}
-	\end{frame}
+%	\section{Protocols}
+%	\begin{frame}{Contract Net Protocol (CNET)}
+%		\begin{itemize}
+%			\item Contract negotiation
+%			\linebreak
+%			\begin{tabular}{cl}
+%				M & Task announcement \\
+%				C & Bid (on best) \\
+%				M & Awarding \\
+%				C & Execution \\
+%			\end{tabular}
+%			\seperation
+%			\item Only announce order\note{Not bid deadline etc}
+%			\item Only 1 outstanding bid
+%			\item Implemented RefusalReason (+ nextAvailableTime)
+%		\end{itemize}
+%	\end{frame}
+%
+%	\begin{frame}{Contract Net with Confirmation (CNCP)}
+%		\begin{itemize}
+%			\item Delayed commitment
+%			\item Bid on all
+%			\item Accept/Decline when awarded
+%			\seperation
+%			\item 1 message
+%			\item Reannounce task
+%		\end{itemize}
+%	\end{frame}
+%
+%	\begin{frame}{Dynamic Contract Net (DynCNET)}
+%		\begin{itemize}
+%			\item Allow contract switching
+%				\begin{itemize}
+%				\item Manager
+%				\item Contractor
+%				\end{itemize}
+%			\item Preparation vs execution
+%			\seperation
+%			\item No oscillation prevention
+%		\end{itemize}
+%	\end{frame}
+%	
+%	\begin{frame}{Other extensions}
+%		\begin{itemize}
+%			\item Prebidding vs Definitive bidding (Aknine et al.)
+%			\item Iterated Contract Net
+%			\item Leveled commitment
+%		\end{itemize}
+%	\end{frame}
 	
 	\section{Experiments}
 	\begin{frame}{Experiment Setup}
