--- a/presentatie/victor.tex
+++ b/presentatie/victor.tex
@@ -44,81 +44,50 @@
 
 	\section{Objectives}
 	
-	\begin{frame}{Objectives \& Hypotheses}
+	\begin{frame}{Objectives}
 		\begin{itemize}
 		\item CNET vs CNCP vs DynCNET
-		\item Hypotheses:
+		\item Compare
 			\begin{itemize}
-			\item Compare
-				\begin{itemize}
-				\item Profit
-				\item Delivery time
-				\item \# clients undelivered
-				\item Message count
-				\end{itemize}
-			\item Influence on profit
-				\begin{itemize}
-				\item \# drones
-				\item \# warehouses
-				\item \# clients
-				\end{itemize}
+			\item Profit
+			\item Delivery time
+			\item \# clients undelivered
+			\item Message count
+			\end{itemize}
+		\item Influence on profit
+			\begin{itemize}
+			\item \# drones
+			\item \# warehouses
+			\item \# clients
 			\end{itemize}
 		\end{itemize}
 	\end{frame}
 		
 	\section{Protocols}
 		
-	\begin{frame}{Contract Net Protocol (CNET)}
+	\begin{frame}{Protocols}
 		\begin{itemize}
-			\item Contract negotiation
-			\linebreak			\begin{tabular}{cl}
+			\item \textbf{CNET}: Contract negotiation
+			\linebreak \small	
+			 \begin{tabular}{cl}
 				M & Task announcement \\
-				C & Bid (on best) \\
+				C & Bid \\
 				M & Awarding \\
 				C & Execution \\
 			\end{tabular}
-		\end{itemize}
-		
-		
-		\begin{itemize}			\item Simplified task announcement: only order
-			\item Committed to bids
-			\item Extension to delay announcement
-		\end{itemize}
-	\end{frame}
-	
-	\begin{frame}{Contract Net with Confirmation (CNCP)}
-		\begin{itemize}
-			\item CNET problem: early commitment
-			\item CNCP solution: commitment when awarded
-			\item When awarded, first check if contractor accepts
-			\begin{itemize}
-				\item if yes: award \& execute task
-				\item if no: try next best contractor
+			\normalsize
+			\item Early commitment
+			\begin{itemize}\item \textbf{CNCP}: commitment when awarded	\end{itemize}
+			\item No dynamism
+			\begin{itemize}\item \textbf{DynCNET}: allow contract switching\end{itemize}
 			\end{itemize}
-		\end{itemize}
-		\begin{itemize}
-			\item Reannounce task instead of trying next best bidder
-			\note{omvat ook mergen task acceptance in 1 bericht}
-		\end{itemize}
 	\end{frame}
-
-	\begin{frame}{Dynamic Contract Net (DynCNET)}
-		\begin{itemize}
-			\item CNET problem: no dynamism
-			\item DynCNET solution: allow contract switching
-			\item When awarded but still in preparation
-		\end{itemize}
-		\begin{itemize}			\item No consideration for oscillation
-		\end{itemize}
-	\end{frame}
-	
-
 	
 	\section{Experiments}
 	\begin{frame}{Experiments}
 		\begin{itemize}
 			\item Test hypotheses
-			\item Two experiments
+			\item 2 experiments
 			\begin{enumerate}
 				\item Vary \# drones/warehouses/clients
 				\item 10 drones/warehouses -- vary \# clients
